# Ponai

./: .gitignore  README.md
.qwen/: settings.json  settings.json.orig
tokitai-ipc-tool/: Cargo.toml  SETUP.md  python_tools.py  requirements.txt
tokitai-ipc-tool/cpp_tools/: CMakeLists.txt  pointcloud_tools.cpp
tokitai-ipc-tool/docs/: IMPLEMENTATION_STATUS.md  INSTANCE_SEG_DESIGN.md  MODEL_COMPARISON_REPORT.md  NETWORK_SERVICE_DESIGN.md  POINTPILLARS_FINAL_REPORT.md  POINTPILLARS_INTEGRATION.md  POINTPILLARS_REAL_MODEL.md  PROJECT_DOCUMENTATION.md  QUICK_REFERENCE.md
tokitai-ipc-tool/python_tools/: create_pointpillars_onnx.py  create_realistic_pointpillars.py  export_pointpillars_onnx.py  instance_seg_server.py  instance_seg_tools.py  ipc_error.py  model_comparison.py  pointcloud_tools.py  pointpillars_simple.py  pointpillars_tools.py  requirements.txt  start_server.sh  test_all_models.py  test_output.pcd  test_pointpillars_pytorch.py
tokitai-ipc-tool/python_tools/models/: pointpillars.onnx  pointpillars_realistic.onnx
tokitai-ipc-tool/src/: ai_scheduler.rs  backend_switch.rs  error.rs  instance_seg_tools.rs  ipc.rs  ipc_error.rs  ipc_types.rs  lib.rs  main.rs  path_utils.rs  pointcloud_tools.rs
tokitai-ipc-tool/src/backend/: http_backend.rs  ipc_backend.rs  mod.rs  trait_def.rs
tokitai-ipc-tool/src/tools/: mod.rs
