[package]
name = "lidar-ai-studio"
version = "0.1.0"
edition = "2021"
description = "3D 点云车机应用 - AI 调度与跨语言工具框架"

[dependencies]
# tokitai - AI 工具定义
tokitai = "0.4"
tokitai-core = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"

# HTTP 客户端（Ollama API）
reqwest = { version = "0.11", features = ["json"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
